--- a/prepros.cfg
+++ b/prepros.cfg
@@ -131,6 +131,62 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "c6535344": {
+          "id": "c6535344",
+          "path": "css/_variables.scss",
+          "output": "css/_variables.css",
+          "name": "_variables.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "cd07ef67"
+          ],
+          "type": "sass"
+        },
+        "d293289a": {
+          "id": "d293289a",
+          "path": "css/_variables.css",
+          "output": "css/_variables-dist.css",
+          "name": "_variables.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "55a23fde": {
+          "id": "55a23fde",
+          "path": "css/_header.scss",
+          "output": "css/_header.css",
+          "name": "_header.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "cd07ef67"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
