--- a/prepros.cfg
+++ b/prepros.cfg
@@ -187,6 +187,35 @@
             "cd07ef67"
           ],
           "type": "sass"
+        },
+        "9246366a": {
+          "id": "9246366a",
+          "path": "js/map.js",
+          "output": "js/map-dist.js",
+          "name": "map.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5bb81cb6": {
+          "id": "5bb81cb6",
+          "path": "images/icon.png",
+          "output": "images/icon.png",
+          "name": "icon.png",
+          "category": "IMAGE",
+          "size": 6573,
+          "type": "png",
+          "initialSize": 6573,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
