Created separate map scss file

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -187,6 +187,58 @@
             "cd07ef67"
           ],
           "type": "sass"
+        },
+        "9246366a": {
+          "id": "9246366a",
+          "path": "js/map.js",
+          "output": "js/map-dist.js",
+          "name": "map.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e0df5a9f": {
+          "id": "e0df5a9f",
+          "path": "css/maps.scss",
+          "output": "css/maps.css",
+          "name": "maps.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "cd07ef67"
+          ],
+          "type": "sass"
+        },
+        "199320fa": {
+          "id": "199320fa",
+          "path": "css/maps.css",
+          "output": "css/maps-dist.css",
+          "name": "maps.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
@@ -207,7 +259,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": true
         },
         "deployment": {
           "ftpHost": "",
